@startuml

hide methods
left to right direction

class App {

}

class Organization {
        - String name
        - String IBAN
}

class Administrator {
        - String name
        - String email
        - String password
}

class Collaborator {
        - String name
        - String email
        - String password
}

class Manager {
        - String name
        - String email
        - String password
}

class User {
        - String name
        - String email
        - String password
}

Collaborator                "0,1" -- "1"      User                      : acts as >
Manager                    "0,1" -- "1"      User                      : acts as >
Organization                 "1" -- "1,..."  Collaborator               : has >
Organization                 "1" -- "1"      Manager                   : has >
App                          "1" -- "*"      Organization              : has >
App                          "1" -- "*"      Administrator             : has >
Administrator                "1" -- "*"      Organization              : adds >
Administrator              "0,1" -- "1"      User                      : acts as >

@enduml
